# bootc

./: .bootc-dev-infra-commit.txt  .packit.yaml  AGENTS.md  Cargo.toml  Dockerfile  REVIEW.md
.github/workflows/: ci.yml  docs.yml
contrib/packaging/: install-rpm-and-setup
crates/blockdev/: Cargo.toml
crates/blockdev/src/: blockdev.rs
crates/blockdev/tests/fixtures/: lsblk-no-udev.json
crates/cli/: Cargo.toml
crates/lib/: Cargo.toml
crates/lib/src/: bootloader.rs  cli.rs  podstorage.rs
crates/lib/src/bootc_composefs/: boot.rs  finalize.rs
crates/lib/src/install/: baseline.rs  config.rs
crates/mount/: Cargo.toml
crates/mount/src/: mount.rs
crates/ostree-ext/: Cargo.toml
crates/ostree-ext/src/container/: skopeo.rs
crates/ostree-ext/src/tar/: write.rs
crates/system-reinstall-bootc/: Cargo.toml
crates/sysusers/: Cargo.toml
crates/tmpfiles/: Cargo.toml
crates/utils/: Cargo.toml
docs/src/man/: bootc-install-config.5.md  bootc-install-to-disk.8.md
hack/: provision-derived.sh
tmt/plans/: integration.fmf
tmt/tests/: tests.fmf
tmt/tests/booted/readonly/: 016-test-blockdev-no-udev.nu  052-test-bli-detection.nu
