[package]
description = "Internal implementation component of bootc; do not use"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "bootc-internal-blockdev"
repository = "https://github.com/bootc-dev/bootc"
version = "1.15.1"

[dependencies]
# Internal crates
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "1.15.1" }
bootc-mount = { package = "bootc-internal-mount", path = "../mount", version = "1.15.1" }

# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
fn-error-context = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }

[lib]
path = "src/blockdev.rs"
