[package]
description = "Internal implementation component of bootc; do not use"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "bootc-internal-mount"
repository = "https://github.com/bootc-dev/bootc"
version = "1.15.1"

[dependencies]
# Internal crates
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "1.15.1" }

# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
fn-error-context = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tempfile = { workspace = true }
cap-std-ext = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }

[lib]
path = "src/mount.rs"

[lints]
workspace = true
