[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for OSTree"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ostree-ext"
repository = "https://github.com/ostreedev/ostree-rs-ext"
version = "0.15.3"

[dependencies]
# Internal crates
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "1.15.1" }

# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
canon-json = { workspace = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive","cargo"] }
clap_mangen = { workspace = true, optional = true }
cfsctl = { workspace = true }
fn-error-context = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true, optional = true }
libc = { workspace = true }
openssl = { workspace = true }
regex = { workspace = true }
rustix = { workspace = true, features = ["fs", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
similar-asserts = { workspace = true, optional = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-std", "time", "process", "rt", "net"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
xshell = { workspace = true, optional = true }

# Crate-specific dependencies
comfy-table = "7.1.1"
containers-image-proxy = "0.9.2"
flate2 = { features = ["zlib"], default-features = false, version = "1.0.20" }
futures-util = "0.3.13"
gvariant = "0.5.0"
indexmap = { version = "2.2.2", features = ["serde"] }
io-lifetimes = "3"
libsystemd = "0.7.0"
ocidir = "0.7.0"
# We re-export this library too.
ostree = { features = ["v2025_3"], version = "0.20.5" }
pin-project = "1.0"
tar = "0.4.43"
tokio-stream = { features = ["sync"], version = "0.1.8" }
zstd = { version = "0.13.1", features = ["pkg-config"] }

[dev-dependencies]
quickcheck = "1"
# https://github.com/rust-lang/cargo/issues/2911
# https://github.com/rust-lang/rfcs/pull/1956
ostree-ext = { path = ".", features = ["internal-testing-api"] }

[package.metadata.docs.rs]
features = ["dox"]

[features]
docgen = ["clap_mangen"]
dox = ["ostree/dox"]
internal-testing-api = ["xshell", "indoc", "similar-asserts"]
# Enable calling back into bootc
bootc = []

[lints]
workspace = true
