[package]
name = "system-reinstall-bootc"
version = "0.1.9"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bootc-dev/bootc"
publish = false
# For now don't bump this above what is currently shipped in RHEL9.
rust-version = "1.85.0"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]

[dependencies]
# Internal crates
bootc-mount = { package = "bootc-internal-mount", path = "../mount", version = "1.15.1" }
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "1.15.1" }

# Workspace dependencies
anstream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fn-error-context = { workspace = true }
indoc = { workspace = true }
log = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
uzers = { workspace = true }

# Workspace dependencies (additional)
indicatif = { workspace = true }

# Crate-specific dependencies
crossterm = "0.29.0"
dialoguer = "0.12.0"
openssh-keys = "0.6.4"
serde_yaml = "0.9.22"
which = "8.0.0"

[lints]
workspace = true
