[package]
name = "bootc-sysusers"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
# Internal crates
bootc-utils = { package = "bootc-internal-utils", path = "../utils", version = "1.15.1" }

# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
fn-error-context = { workspace = true }
hex = { workspace = true }
rustix = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
uzers = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
similar-asserts = { workspace = true }

[lints]
workspace = true
